# mace_gaussian_interface

./: .gitignore  README.md  acoh.xyz  acoh_freq_anharm.gjf  fort.7  gm_helper.py  gm_main.py  mace_calculators.py  pyproject.toml  requirements.txt  setup.py
mace_ML_pkg/: setup.cfg
mace_dipole_pkg/: setup.cfg
mace_dipole_pkg/mace_dipole_core/calculators/: __init__.py  foundations_models.py  lammps_mace.py  mace.py
mace_dipole_pkg/mace_dipole_core/cli/: active_learning_md.py  create_lammps_model.py  eval_configs.py  eval_mu_alpha.py  preprocess_data.py  run_train.py
mace_dipole_pkg/mace_dipole_core/data/: atomic_data.py  hdf5_dataset.py  utils.py
mace_dipole_pkg/mace_dipole_core/modules/: blocks.py  loss.py  models.py  radial.py  symmetric_contraction.py  utils.py
mace_dipole_pkg/mace_dipole_core/tools/: finetuning_utils.py  scripts_utils.py  train.py
mace_dipole_pkg/scripts/: eval_configs.py  preprocess_data.py  run_train.py
mace_dipole_pkg/tests/: test_calculator.py  test_cg.py  test_compile.py  test_data.py  test_foundations.py  test_hessian.py  test_models.py  test_modules.py  test_run_train.py  test_schedulefree.py  test_tools.py
mace_gaussian_interface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tom_stuff/: BFPtPZ_tBu_B3LYP.com  qsub.sh
