[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mace-gaussian-interface"
version = "0.1.0"
description = "Interface between MACE ML potentials and Gaussian for molecular calculations"
readme = "README.md"
authors = [
    {name = "Manuel Ott", email = "your.email@domain.com"}
]
keywords = ["quantum-chemistry", "machine-learning", "molecular-simulation", "gaussian", "mace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20.0",
    "pyzmq>=22.0.0", 
    "ase>=3.22.0",
    "torch>=1.12.0",
    "mace-torch>=0.3.0",
    "rdkit>=2022.03.0",
    "matplotlib>=3.5.0",
]

#[project.optional-dependencies]
#xtb = ["xtb-python>=22.1.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
#all = ["mace-gaussian-interface[xtb,dev]"]

[project.scripts]
gm-main = "gm_main:main"
gm-diagnose = "gm_main:diagnose_main"

[project.urls]
Homepage = "https://github.com/yourusername/mace-gaussian-interface"
Repository = "https://github.com/yourusername/mace-gaussian-interface.git" 
Issues = "https://github.com/yourusername/mace-gaussian-interface/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
